--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -48,8 +48,9 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  color: #005b95;
+  /* line-height: 1.15;
+  font-size: 4rem; */
 }
 
 .title,
