--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,16 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  color: #212121;
+} / colors
+  Primária: #005b95;
+  black 87%: #212121;
+  Black 54%: #757575;
+  black 38%: #DEDEDE;
+   /
 
 a {
   color: inherit;
@@ -14,3 +20,8 @@ a {
 * {
   box-sizing: border-box;
 }
+
+h1 { font-size: 24px; }
+h2 { font-size: 20px; }
+h3, label { font-size: 14px; font-weight: bold; }
+ */
