vamo de docker!

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+placeholder {
+  overflow: hidden;  
+  text-overflow:ellipsis !important;
+  white-space: nowrap;
+}
 /* html,
 body {
   padding: 0;
